# energy-ai-copilot

./: .gitignore  Example_excel.xlsx  app.py  pyproject.toml  test.py
