[project]
name = "cascade-ai-copilot"
version = "0.1.0"
description = "AI-assisted energy analytics copilot"
authors = [
    {name = "vikas"}
]
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.2,<3)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "streamlit (>=1.55.0,<2.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=26.3.1,<27.0.0)",
    "ruff (>=0.15.8,<0.16.0)"
]

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]
